--- a/_posts/2017-05-28-hao123-issue.md
+++ b/_posts/2017-05-28-hao123-issue.md
@@ -2,9 +2,10 @@
 layout: post
 title: 记录一下解决Chrome主页被hao123劫持的过程
 description: >
-  Jekyll is a static site generator, an open-source tool for creating simple yet powerful websites of all shapes and sizes.
+  Chrome主页被hao123劫持了，该怎么办？
 tags: [hyde]
 author: author1
+comments: true
 canonical_url: http://hyde.getpoole.com/2012/02/06/whats-jekyll/
 ---
 
