change hao123 issue

--- a/_posts/2017-05-28-hao123-issue.md
+++ b/_posts/2017-05-28-hao123-issue.md
@@ -3,7 +3,7 @@ layout: post
 title: 记录一下解决Chrome主页被hao123劫持的过程
 description: >
   Chrome主页被hao123劫持了，该怎么办？
-tags: [涨知识, 全部]
+tags: [涨知识]
 author: author1
 comments: true
 canonical_url: http://hyde.getpoole.com/2012/02/06/whats-jekyll/
