change author intro & link appearance

--- a/_posts/2018-03-21-sell-on-ebay-01.md
+++ b/_posts/2018-03-21-sell-on-ebay-01.md
@@ -11,11 +11,11 @@ canonical_url: http://hyde.getpoole.com/2012/02/06/whats-jekyll/
 
 跟eBay打了差不多3年交道之后，我觉得自己应该写点什么，把这些经历做个整理，算是对自己生活做个记录，也希望能给到这里看看的小伙伴提供一些启发。
 
-* ### [eBay是什么？](#sell-on-ebay-01-01)
+* ### [eBay是什么？](#sell-on-ebay-01-01) *
 
-* ### [eBay站点究竟是什么鬼？](#sell-on-ebay-01-02)
+* ### [eBay站点究竟是什么鬼？](#sell-on-ebay-01-02) *
 
-* ### [eBay有没有中国站点？](#sell-on-ebay-01-03)
+* ### [eBay有没有中国站点？](#sell-on-ebay-01-03) *
 
 ***
 
