continue sell on ebay

--- a/_posts/2018-03-21-sell-on-ebay-01.md
+++ b/_posts/2018-03-21-sell-on-ebay-01.md
@@ -19,13 +19,17 @@ canonical_url: http://hyde.getpoole.com/2012/02/06/whats-jekyll/
 
 [我想在eBay上买东西，应该怎么操作？](#sell-on-ebay-01-04)
 
+[我想在eBay上卖东西，应该怎么操作？](#sell-on-ebay-01-05)
+
 ***
 
 <h3 id="sell-on-ebay-01-01">eBay是什么？</h3>
 
 简单来说，就是外国人用的淘宝，但是页面不像淘宝那么精致，里面的搜索、筛选、推荐功能也不像淘宝那么人性化，也没有那些花里胡哨的娱乐、社交功能，然而它却是跨境电商的一大战场。
 
-究其原因，当然是因为用的人多啦。
+淘宝是2003年才有的，而eBay则是1995年就有了，可以说，从淘宝诞生前很久开始，世界上其他国家的人就在用eBay了，而正是因为背靠这么庞大的买家和卖家群体，eBay才能有现在的繁荣。
+
+不过说实话，我感觉现在eBay的页面恐怕跟1995年也没什么区别。
 
 <h3 id="sell-on-ebay-01-02">eBay站点究竟是什么鬼？</h3>
 
@@ -54,5 +58,27 @@ eBay没有澳门站，情不自禁想为澳门鸣个不平。
 反观美国站点，面向美国市场的卖家本来就多，而其中只要有一部分把大陆设置为运送地点，则买家虽然身在大陆，一样可以买到美国市场的商品。
 
 所以说，实在没有必要因为想看中文就局限在香港站点买东西。
+
+不过有件事最好先在香港站点完成，然后才开始海淘比较好，那就是——注册eBay账号。
+
+eBay账号在各个eBay站点都可以通用的，完全不需要重新注册，所以我们可以挑选一个自己熟悉的语言环境去注册，然后再去挑战用自己不熟悉的语言去购物嘛！
+
+在eBay香港站注册步骤如下：
+
+1. 打开[ebay.com.hk](https://www.ebay.com.hk)
+
+2. 点击左上角的“注册”
+
+3. 填写姓名、电邮地址，设置密码，点“登记成为会员”，然后等着收到eBay的确认邮件，你就有一个可以海淘的eBay账号啦！
+
+4. 
+
+<h3 id="sell-on-ebay-01-05">我想在eBay上卖东西，应该怎么操作？</h3>
+
+过去两年多我主要接触的是eBay卖方的事情，自认为在这方面还是小有发言权的。
+
+刚才我们以买家身份注册的eBay账号同样也可以用来做卖家账号，但是需要提交个人资料，经过卖家身份认证，才能开通卖家身份，这一点上跟淘宝是一样的。
+
+但有点不同的是，eBay不用交保证金哦
 
 待续。。。
