change line-height for ol

--- a/_posts/2018-03-21-sell-on-ebay-01.md
+++ b/_posts/2018-03-21-sell-on-ebay-01.md
@@ -66,12 +66,16 @@ eBay账号在各个eBay站点都可以通用的，完全不需要重新注册，
 在eBay香港站注册步骤如下：
 
 1. 打开[ebay.com.hk](https://www.ebay.com.hk)
+{:.line-height-0}
 
 2. 点击左上角的“注册”
+{:.line-height-0}
 
 3. 填写姓名、电邮地址，设置密码，点“登记成为会员”，然后等着收到eBay的确认邮件，你就有一个可以海淘的eBay账号啦！
+{:.line-height-0}
 
 4. 
+{:.line-height-0}
 
 <h3 id="sell-on-ebay-01-05">我想在eBay上卖东西，应该怎么操作？</h3>
 
