--- a/_posts/2018-03-21-sell-on-ebay-01.md
+++ b/_posts/2018-03-21-sell-on-ebay-01.md
@@ -65,7 +65,7 @@ eBay账号在各个eBay站点都可以通用的，完全不需要重新注册，
 
 在eBay香港站注册步骤如下：
 
-{:.line-height-0}
+{:.margin-btm-0-for-child-p}
 1. 打开[ebay.com.hk](https://www.ebay.com.hk)
 
 2. 点击左上角的“注册”
