update sell on ebay 01

--- a/_posts/2018-03-21-sell-on-ebay-01.md
+++ b/_posts/2018-03-21-sell-on-ebay-01.md
@@ -61,7 +61,7 @@ eBay没有澳门站，情不自禁想为澳门鸣个不平。
 
 不过有件事最好先在香港站点完成，然后才开始海淘比较好，那就是——注册eBay账号。
 
-eBay账号在各个eBay站点都可以通用的，完全不需要重新注册，所以我们可以挑选一个自己熟悉的语言环境去注册，然后再去挑战用自己不熟悉的语言去购物嘛！
+同一个eBay账号在各个eBay站点都可以通用，完全不需要重新注册，所以我们可以挑选一个自己熟悉的语言环境去注册，然后再去挑战用自己不熟悉的语言去购物嘛！
 
 在eBay香港站注册步骤如下：
 
@@ -72,14 +72,34 @@ eBay账号在各个eBay站点都可以通用的，完全不需要重新注册，
 
 3. 填写姓名、电邮地址，设置密码，点“登记成为会员”，然后等着收到eBay的确认邮件，你就有一个可以海淘的eBay账号啦！
 
-4. 
+在eBay香港站购物的步骤我就不赘述了，大家将就着看一看繁体中文，总归应该还是能买到东西的。
+
+在eBay美国站购物的步骤：
+
+{:.margin-btm-0-for-child-p}
+1. 打开[ebay.com](https://www.ebay.com)
+
+2. 点击左上角的“sign in”，输入我们刚才在香港站用来注册的用户名和密码，点sign in的蓝色大按钮登录
+
+3. 页面顶部有个长长的搜索框，把你想买的物品的英文输入进去，比如“Harry Potter book”，然后点右边的蓝色“search”按钮
+
+4. 在搜索结果里找到你喜欢的物品，点击商品标题进去商品详情页购买。如果乍一看没有想要的，还可以用左侧的筛选条件进行筛选，不过eBay提供的筛选条件只能让大家做到一个大而化之的筛选。   
+ - 商品价格下有“xx bids”且价格看起来很便宜的是拍卖的商品，是需要买家一个比一个出价高才能买到的
+ - 商品价格下有“Buy it now”字样的是固定价格的商品，不用跟人竞拍，一般称为“一口价”商品。
+ - 如果两个都没有，却写了“or best offer”字样的话，说明它还是一个“一口价”商品，只不过买家可以还价。
+ - 价格右边的时间是该商品距离下架还剩下的时间，如果时间所剩无几，说明商品快下架或是拍卖快结束了，大家可得抓紧咯
+ - 剩余时间的下面会有“from xxx”，也就是说卖家会从xxx这个国家/地区发货，看到这里你就可以预估一下收到货的时间了
+
+5. 点进商品详情页，如果看到一个“place bid”的蓝色按钮，说明这是拍卖商品，你得出个高价跟别人竞争。如果是“Buy it now”，就可以点这里直接下单，或是点下面的“add to cart”，加入购物车。如果除了“Buy it now”之外还有个“make offer”，说明你可以点这里跟卖家讨价还价了
+
+6. 下单结算、国际转运啥的我就不多说了，大家能自己付钱、自己直接收货当然是最好，但是如果不行的话也可以找找代购、代收、转运，能用钱解决的问题那就不是问题
 
 <h3 id="sell-on-ebay-01-05">我想在eBay上卖东西，应该怎么操作？</h3>
 
 过去两年多我主要接触的是eBay卖方的事情，自认为在这方面还是小有发言权的。
 
-刚才我们以买家身份注册的eBay账号同样也可以用来做卖家账号，但是需要提交个人资料，经过卖家身份认证，才能开通卖家身份，这一点上跟淘宝是一样的。
+刚才我们以买家身份注册的eBay账号同样也可以用来做卖家账号，但是需要提交个人资料，绑定支付卖家费用的信用卡或是PayPal账号，经过卖家身份认证之后，才可以发布商品。
 
-但有点不同的是，eBay不用交保证金哦
+发布商品之前需要做商品信息草稿，只有卖家身份认证成功之后才可以发布，所以我们可以先填一下商品资料，等卖家身份验证好了再上架。
 
 待续。。。
