--- a/_posts/2018-04-15-css-items.md
+++ b/_posts/2018-04-15-css-items.md
@@ -87,6 +87,7 @@ canonical_url: http://hyde.getpoole.com/2012/02/06/whats-jekyll/
   }
   .gearCircle{
     position: absolute;
+    box-sizing: content-box;
     top: 16.67%;
     left: 16.67%;
     height: 33.33%;
