--- a/_posts/2018-04-15-css-items.md
+++ b/_posts/2018-04-15-css-items.md
@@ -261,3 +261,153 @@ canonical_url: http://hyde.getpoole.com/2012/02/06/whats-jekyll/
 <p></p>
 
 代码示例页面 -> <a href="https://www.houzhenni.com/cssitem/css-tomato.html" target="_blank">CSS tomato</a>
+
+**css实心五角星**
+
+一个实心的，可以加圆形边框的五角星
+
+<style>
+.solid-pentagram-container{
+	/* change size start */
+	width: 200px;
+	height: 200px;
+	/* change size end */
+	border-radius: 100%;
+ 	border: red solid 5px; 
+}
+.solid-pentagram-outer{
+	position: relative;
+	left: 10%;
+	width: 77%;
+	height: 77%;
+}
+.solid-pentagram-inner{
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+.solid-triangle-outer-1, .solid-triangle-outer-2, .solid-triangle-outer-3{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+.solid-triangle-outer-1{
+	top: -2.5%;
+	left: -25%;
+	transform: rotate(-36deg);
+}
+.solid-triangle-outer-2{
+	top: -16%;
+	left: 10%;
+	transform: rotate(36deg);
+}
+.solid-triangle-outer-3{
+	top: 13%;
+	right: -34.5%;
+	transform: rotate(108deg);
+}
+.solid-triangle-inner{
+	position: absolute;
+	top: 122.5%;
+	right: 0%;
+	width: 200%;
+	height: 100%;
+	background-color: red;
+	transform: rotate(108deg) skewx(54deg);
+}
+</style>
+
+<div class="solid-pentagram-container">
+<div class="solid-pentagram-outer">
+<div class="solid-pentagram-inner">
+<div class="solid-triangle-outer-1">
+	<div class="solid-triangle-inner"></div>
+</div>
+<div class="solid-triangle-outer-2">
+	<div class="solid-triangle-inner"></div>
+</div>
+<div class="solid-triangle-outer-3">
+	<div class="solid-triangle-inner"></div>
+</div>
+</div>
+</div>
+</div>
+
+<p></p>
+
+代码示例页面 -> <a href="https://www.houzhenni.com/cssitem/css-solid-pentagram.html" target="_blank">CSS solid pentagram</a>
+
+**css圆底空心五角星**
+
+一个空心的，边缘为圆形的五角星
+
+<style>
+.pentagram-container{
+	/* change size start */
+	width: 200px;
+	height: 200px;
+	/* change size end */
+}
+.pentagram-outer{
+	position: relative;
+	width: 100%;
+	height: 100%;
+	border-radius: 100%;
+	overflow: hidden;
+}
+.pentagram-inner{
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+.pentagram-01, .pentagram-02, .pentagram-03, .pentagram-04, .pentagram-05{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: red;
+}
+.pentagram-01{
+	top: -66%;
+	left: 45%;
+	transform: skewx(18deg);
+}
+.pentagram-02{
+	top: -66%;
+	right: 45%;
+	transform: skewx(-18deg);
+}
+.pentagram-03{
+	bottom: -22.5%;
+	right: 75.5%;
+	transform: rotate(18deg) skewy(18deg);
+}
+.pentagram-04{
+	bottom: -22.5%;
+	left: 75.5%;
+	transform: rotate(-18deg) skewy(-18deg);
+}
+.pentagram-05{
+	width: 100%;
+	height: 100%;
+	bottom: -80%;
+	left: 2%;
+	transform: rotate(54deg) skewy(-18deg);
+}
+</style>
+
+<div class="pentagram-container">
+<div class="pentagram-outer">
+<div class="pentagram-inner">
+<div class="pentagram-01"></div>
+<div class="pentagram-02"></div>
+<div class="pentagram-03"></div>
+<div class="pentagram-04"></div>
+<div class="pentagram-05"></div>
+</div>
+</div>
+</div>
+
+<p></p>
+
+代码示例页面 -> <a href="https://www.houzhenni.com/cssitem/css-hollow-pentagram.html" target="_blank">CSS holow pentagram</a>
