--- a/_posts/2018-04-15-css-items.md
+++ b/_posts/2018-04-15-css-items.md
@@ -410,4 +410,4 @@ canonical_url: http://hyde.getpoole.com/2012/02/06/whats-jekyll/
 
 <p></p>
 
-代码示例页面 -> <a href="https://www.houzhenni.com/cssitem/css-hollow-pentagram.html" target="_blank">CSS holow pentagram</a>
+代码示例页面 -> <a href="https://www.houzhenni.com/cssitem/css-hollow-pentagram.html" target="_blank">CSS hollow pentagram</a>
