update eBay seller guide

--- a/_posts/2018-03-21-sell-on-ebay-01.md
+++ b/_posts/2018-03-21-sell-on-ebay-01.md
@@ -100,4 +100,37 @@ eBay没有澳门站，情不自禁想为澳门鸣个不平。
 
 发布商品之前需要做商品信息草稿，只有卖家身份认证成功之后才可以发布，所以我们可以先填一下商品资料，等卖家身份验证好了再上架。
 
-待续。。。
+update 2018-08-11
+
+登录你想要售卖商品的eBay站点，比如美国站（ebay.com），这时候你就可以发布主要针对美国买家的产品了。
+
+请注意，eBay页面的语言是跟着eBay站点来的，如果你要卖去美国站，就必须在美国站填写信息，页面也只有英文。其他使用英文的站点还有英国站（ebay.co.uk）、澳大利亚站（ebay.com.au）、加拿大站（ebay.ca）、爱尔兰站（ebay.ie）、新加坡站（ebay.com.sg）等。
+
+其他还有使用当地小语种语言的国家站点，比如德国站（ebay.de）、法国站（ebay.fr）等，在填写商品信息的时候页面语言也是当地语言，如果你看不懂的话，最好使用翻译工具。
+
+美国站的页面左上角有你的名字、Daily Deals和Sell字样，点击Sell，就会跳到可以新建商品信息草稿的页面，这个页面有一个搜索框，你可以填写关键字来搜索eBay上已经有的同款产品，减少你自己填写信息的时间。
+
+填写了关键字之后，搜索框会出现一些提示，如果你选择第一个“start with this title”，那么eBay会给你很多标题里有这个关键字的产品，你可以选择是不是要跟别人卖同款。
+
+如果你不选择“start with this title”，而是选择下面提示的分类，那么你就会直接进入填写商品信息的页面。
+
+以下是必填的内容，在eBay页面上有红色星号提示：
+
+1. 产品标题（Title）    
+ 越详细越好，在80个英文字符的限制内将你能想到的产品关键字都填上去.    
+ eg：Fine Jewelry 925 Sterling Silver Necklace Pendant Daisy Flower Free Shipping    
+ 这条标题在80个字符限制内想尽办法囊括了一条雏菊花样纯银项链可能相关的所有关键字，最后再加一个“包邮”，这是我觉得最能吸引我的项链产品标题了。
+
+2. 产品分类（Category）    
+ 当你有了产品标题之后，eBay会给出它建议的一些产品分类，你可以从中选择，通常第一个就是最适合的，如果都不符合的话，还可以点“search categories”，用标题或者其他关键字搜索，或者还可以点“browse categories”，直接从所有的分类里面一层一层往下选。
+
+3. 产品新旧状况（Condition）    
+ 产品新旧状况是在eBay提供的下拉菜单里选择的，有时候不同的产品分类里面提供的新旧状况选项也是不同的。
+
+4. 产品橱窗图（Photo）
+ 这里可以上传产品的图片，你也可以选择图片上传区域右上角的“import from web”，填写网络图片地址并添加进你的橱窗图里。    
+ 对于产品橱窗图，eBay的要求是最少有一张，最多12张，图片尺寸最小不得小于500 x 500像素，小于这个尺寸，eBay将不会接受。    
+ 我做了一个检测图片尺寸的工具，大家可以用来检查你的图片是否符合eBay要求。 <a href="https://www.houzhenni.com/myapp/image-size-checker.html" target="_blank">Image Size Checker</a>    
+ 对于没有选项分支的单属性Listing，最多是12张图片，但是如果是多属性的Listing，除了12张主图之外，每一个可以加图片的选项都可以加最多12张图。而多属性Listing最多可以有250个属性组合，也就是说理论上最多可以有3012张图片。不过通常也不会有人真的上传这么多吧。
+
+待续。。。。。。
