add link to e-comm gitbook

--- a/_posts/2018-03-21-sell-on-ebay-01.md
+++ b/_posts/2018-03-21-sell-on-ebay-01.md
@@ -133,4 +133,8 @@ update 2018-08-11
  我做了一个检测图片尺寸的工具，大家可以用来检查你的图片是否符合eBay要求。 <a href="https://www.houzhenni.com/myapp/image-size-checker.html" target="_blank">Image Size Checker</a>    
  对于没有选项分支的单属性Listing，最多是12张图片，但是如果是多属性的Listing，除了12张主图之外，每一个可以加图片的选项都可以加最多12张图。而多属性Listing最多可以有250个属性组合，也就是说理论上最多可以有3012张图片。不过通常也不会有人真的上传这么多吧。
 
-待续。。。。。。
+2018-08-29 update
+
+本页应该不会再更新了。
+
+为了能更加系统地描述eBay以及其他电商平台的操作流程，我开始在gitbook上面写电子书，请大家移步[跨境电商不完全教程](https://e-comm.houzhenni.com)，或访问本页面菜单里的教程链接，精彩内容都在里面哦~
