--- a/_featured_tags/剧评.md
+++ b/_featured_tags/剧评.md
@@ -1,11 +1,11 @@
 ---
 layout: list
-title: 涨知识
-slug: 涨知识
+title: 剧评
+slug: review
 menu: false
 order: 2
 description: >
-  总是在不经意间又学到了新知识~
+  看过的剧多了，总有点想法不得不说
 ---
 <!-- accent_color: '#268bd2'
 accent_image:
